@@ -27,14 +27,12 @@ import net.sf.rubycollect4j.succ.Successive;
 
 /**
  * 
- * RangeIterator iterates each element within a range defined by 2 Comparable
- * elements.
+ * RangeIterator iterates each element within a range derived by 2 objects.
  * 
  * @param <E>
  *          the type of the elements
  */
-public final class RangeIterator<E extends Comparable<E>> implements
-    Iterator<E> {
+public final class RangeIterator<E> implements Iterator<E> {
 
   private final Successive<E> successive;
   private final E endPoint;
